<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable name="steps" type="String" />
        <variable name="period" type="String" />
        <variable name="motionX" type="String" />
        <variable name="motionY" type="String" />
        <variable name="motionZ" type="String" />
    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/detail_fragment_title_text_width1"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="@dimen/detail_fragment_text_size1"
                android:textStyle="bold"
                android:text="@string/detail_steps_title" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="@dimen/detail_fragment_text_size1"
                android:text="@{steps}" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/detail_fragment_title_text_width2"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="@dimen/detail_fragment_text_size1"
                android:textStyle="bold"
                android:text="@string/detail_period_title" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="@dimen/detail_fragment_text_size1"
                android:text="@{period}" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/detail_fragment_title_text_width2"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="@dimen/detail_fragment_text_size1"
                android:textStyle="bold"
                android:text="@string/detail_motion_x_title"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="@dimen/detail_fragment_text_size1"
                android:text="@{motionX}" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/detail_fragment_title_text_width2"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="@dimen/detail_fragment_text_size1"
                android:textStyle="bold"
                android:text="@string/detail_motion_y_title" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="@dimen/detail_fragment_text_size1"
                android:text="@{motionY}" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/detail_fragment_title_text_width2"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="@dimen/detail_fragment_text_size1"
                android:textStyle="bold"
                android:text="@string/detail_motion_z_title" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="@dimen/detail_fragment_text_size1"
                android:text="@{motionZ}" />

        </LinearLayout>

    </LinearLayout>

</layout>